# SWJTU-Calendar

./: .gitignore  README.md  build-macOS.sh  main.py  pyproject.json  pyproject.toml  requirements.txt  test.py
.github/workflows/: autobuild.yml
core/: __init__.py  core.py  core2.py  utils.py
core/ics/: __init__.py  main.py  randomcolor.py  sample.json  task.json
core/utils/: __init__.py  baseObj.py  saveclasstable.py  utils.py  web.py
core/utils/majors/Leeds_EE/: ClassObj.py
gui/: app.py
gui/utils/: AddFont.py  ChoosePath.py  Menu.py  RunMainProgramme.py  Windows.py  __init__.py  extras.py
src/: __init__.py  core.py  core2.py
src/infos/: __init__.py  infos.py
src/utils/: saveclasstable.py
src/utils/base/: __init__.py
src/utils/base/Class/: baseObj.py
src/utils/base/ics/: __init__.py  ics.py
src/utils/majors/Leeds_EE/: ClassObj.py
unical/: __init__.py  __main__.py  core.py
unical/infos/: infos.py
unical/main/: __init__.py  saveclasstable.py  utils.py
unical/main/base/: __init__.py
unical/main/base/Class/: baseObj.py
unical/main/base/ics/: ics.py
unical/main/database/: db.py  utils.py
unical/main/utils/: constants.py  logger.py  saveclasstable.py  utils.py  web.py
unical/srv/: __init__.py  example.py  router.py
unical/srv/Service/: RegisterSerive.py  __init__.py  about.py  githuboauth.py  savecookie.py
unical/srv/Worker/: RegisterWorker.py
unical/utils/: GetClassType.py  __init__.py  saveclasstable.py  web.py
unical/utils/database/: db.py  utils.py
utils/: CaptchaRecognition.py  __init__.py  saveclasstable.py  web.py
(+5 files in other folders)
