[tool.poetry]
name = "unical"
version = "0.0.1-beta1"
description = ""
authors = ["Yinan Qin <el21yg@leeds.ac.uk>"]
readme = "README.md"
packages = [
    { include = "unical" }
]


[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^66.1.1"
beautifulsoup4 = "^4.11.1"
pyppeteer = "^1.0.2"
requests = "^2.28.2"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#设置poetry包管理工具的自定义pypi镜像源配置
[[tool.poetry.source]]
name = "Tsinghua"
url = "https://opentuna.cn/pypi/web/simple"
default = true
secondary = false




